--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -23,18 +23,18 @@
     "lint": "tslint ./angularApp"
   },
   "dependencies": {
-    "@angular/animations": "4.4.0-RC.0",
-    "@angular/common": "4.4.0-RC.0",
-    "@angular/compiler": "4.4.0-RC.0",
-    "@angular/compiler-cli": "4.4.0-RC.0",
-    "@angular/core": "4.4.0-RC.0",
-    "@angular/forms": "4.4.0-RC.0",
-    "@angular/http": "4.4.0-RC.0",
-    "@angular/platform-browser": "4.4.0-RC.0",
-    "@angular/platform-browser-dynamic": "4.4.0-RC.0",
-    "@angular/platform-server": "4.4.0-RC.0",
-    "@angular/router": "4.4.0-RC.0",
-    "@angular/upgrade": "4.4.0-RC.0",
+    "@angular/animations": "4.4.1",
+    "@angular/common": "4.4.1",
+    "@angular/compiler": "4.4.1",
+    "@angular/compiler-cli": "4.4.1",
+    "@angular/core": "4.4.1",
+    "@angular/forms": "4.4.1",
+    "@angular/http": "4.4.1",
+    "@angular/platform-browser": "4.4.1",
+    "@angular/platform-browser-dynamic": "4.4.1",
+    "@angular/platform-server": "4.4.1",
+    "@angular/router": "4.4.1",
+    "@angular/upgrade": "4.4.1",
     "@ngrx/effects": "^4.0.5",
     "@ngrx/store": "^4.0.3",
     "@ngrx/store-devtools": "^4.0.0",
