--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -39,7 +39,7 @@
     "core-js": "2.5.1",
     "ie-shim": "0.1.0",
     "msgpack5": "^3.5.1",
-    "@aspnet/signalr-client": "1.0.0-alpha2-final"
+    "@aspnet/signalr-client": "1.0.0-alpha2-final",
     "rxjs": "5.5.2",
     "zone.js": "0.8.18"
   },
