--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -35,6 +35,9 @@
     "@angular/platform-server": "5.0.0",
     "@angular/router": "5.0.0",
     "@angular/upgrade": "5.0.0",
+    "@ngrx/effects": "^4.0.5",
+    "@ngrx/store": "^4.0.3",
+    "@ngrx/store-devtools": "^4.0.0",
     "bootstrap": "3.3.7",
     "core-js": "2.5.1",
     "ie-shim": "0.1.0",
