--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -72,7 +72,7 @@
     "karma-webpack": "^2.0.5",
     "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
-    "uglifyjs-webpack-plugin": "1.0.0-beta.2",
+    "uglifyjs-webpack-plugin": "1.0.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
