switching to HTTPS

--- a/src/AspNetCoreAngularSignalR/appsettings.json
+++ b/src/AspNetCoreAngularSignalR/appsettings.json
@@ -7,7 +7,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=C:\\git\\AspNetCoreAngularSignalR\\src\\AspNetCoreAngularSignalR\\news.sqlite"
-  }
+	"ConnectionStrings": {
+		"DefaultConnection": "Data Source=C:\\git\\damienbod\\AspNetCoreAngularSignalR\\src\\AspNetCoreAngularSignalR\\news.sqlite"
+	}
 }
