--- a/src/AspNetCoreAngularSignalR/Properties/launchSettings.json
+++ b/src/AspNetCoreAngularSignalR/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5000/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44324/",
+      "sslPort": 44324
     }
   },
   "profiles": {
