--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -26,7 +26,7 @@
     "@ngrx/effects": "6.0.0-beta.1",
     "@ngrx/store": "6.0.0-beta.1",
     "@ngrx/store-devtools": "6.0.0-beta.1",
-    "@aspnet/signalr": "^1.0.0-preview2-final",
+    "@aspnet/signalr": "1.0.0-rc1-update1",
     "bootstrap": "3.3.7",
     "@angular/animations": "6.0.0",
     "@angular/common": "6.0.0",
