--- a/src/ConsoleSignalRMessagePack/ConsoleSignalRMessagePack.csproj
+++ b/src/ConsoleSignalRMessagePack/ConsoleSignalRMessagePack.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.0-preview2-final" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.0-rc1-final" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.MsgPack" Version="1.0.0-preview2-final" />
   </ItemGroup>
 
