--- a/src/ConsoleSignalRMessagePack/ConsoleSignalRMessagePack.csproj
+++ b/src/ConsoleSignalRMessagePack/ConsoleSignalRMessagePack.csproj
@@ -7,7 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.0-rc1-final" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.MsgPack" Version="1.0.0-preview2-final" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="1.0.0-rc1-final" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.0-rc1-final" />
   </ItemGroup>
 
   <ItemGroup>
