--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -23,36 +23,36 @@
     "lint": "tslint ./angularApp"
   },
   "dependencies": {
-    "@ngrx/effects": "6.0.0-beta.1",
-    "@ngrx/store": "6.0.0-beta.1",
-    "@ngrx/store-devtools": "6.0.0-beta.1",
     "@aspnet/signalr": "1.0.0-rc1-final",
     "bootstrap": "3.3.7",
-    "@angular/animations": "6.0.1",
-    "@angular/common": "6.0.1",
-    "@angular/compiler": "6.0.1",
-    "@angular/compiler-cli": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/forms": "6.0.1",
-    "@angular/http": "6.0.1",
-    "@angular/platform-browser": "6.0.1",
-    "@angular/platform-browser-dynamic": "6.0.1",
-    "@angular/platform-server": "6.0.1",
-    "@angular/router": "6.0.1",
-    "@angular/upgrade": "6.0.1",
-    "@angular-devkit/core": "0.6.1",
-    "core-js": "2.5.6",
+    "@ngrx/effects": "6.0.1",
+    "@ngrx/store": "6.0.1",
+    "@ngrx/store-devtools": "6.0.1",
+    "@angular/animations": "6.0.3",
+    "@angular/common": "6.0.3",
+    "@angular/compiler": "6.0.3",
+    "@angular/compiler-cli": "6.0.3",
+    "@angular/core": "6.0.3",
+    "@angular/forms": "6.0.3",
+    "@angular/http": "6.0.3",
+    "@angular/platform-browser": "6.0.3",
+    "@angular/platform-browser-dynamic": "6.0.3",
+    "@angular/platform-server": "6.0.3",
+    "@angular/router": "6.0.3",
+    "@angular/upgrade": "6.0.3",
+    "@angular-devkit/core": "0.6.5",
+    "core-js": "2.5.7",
     "ie-shim": "0.1.0",
-    "msgpack5": "4.0.2",
-    "rxjs": "6.1.0",
-    "rxjs-compat": "6.1.0",
+    "msgpack5": "4.2.0",
+    "rxjs": "6.2.0",
+    "rxjs-compat": "6.2.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^6.0.1",
+    "@ngtools/webpack": "^6.0.5",
     "@types/jasmine": "^2.8.7",
     "angular-router-loader": "0.8.5",
-    "@types/node": "^10.0.6",
+    "@types/node": "^10.1.3",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -83,10 +83,10 @@
     "typescript": "2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.2",
-    "webpack-bundle-analyzer": "^2.11.2",
+    "webpack": "^4.9.1",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^3.1.4",
-    "webpack-cli": "2.1.3"
+    "webpack-cli": "2.1.4"
   },
   "-vs-binding": {
     "ProjectOpened": [
