--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -23,8 +23,8 @@
     "lint": "tslint ./angularApp"
   },
   "dependencies": {
-    "@aspnet/signalr": "1.0.0-rc1-final",
     "bootstrap": "3.3.7",
+    "@aspnet/signalr": "1.0.0",
     "@ngrx/effects": "6.0.1",
     "@ngrx/store": "6.0.1",
     "@ngrx/store-devtools": "6.0.1",
@@ -40,7 +40,7 @@
     "@angular/platform-server": "6.0.3",
     "@angular/router": "6.0.3",
     "@angular/upgrade": "6.0.3",
-    "@angular-devkit/core": "0.6.5",
+    "@angular-devkit/core": "0.7.0-beta.1",
     "core-js": "2.5.7",
     "ie-shim": "0.1.0",
     "msgpack5": "4.2.0",
@@ -49,10 +49,10 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^6.0.5",
+    "@ngtools/webpack": "^6.1.0-beta.1",
     "@types/jasmine": "^2.8.7",
     "angular-router-loader": "0.8.5",
-    "@types/node": "^10.1.3",
+    "@types/node": "^10.1.4",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -83,7 +83,7 @@
     "typescript": "2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.9.1",
+    "webpack": "^4.10.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^3.1.4",
     "webpack-cli": "2.1.4"
