--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -24,68 +24,68 @@
   },
   "dependencies": {
     "bootstrap": "4.1.3",
-    "@aspnet/signalr": "1.0.2",
+    "@aspnet/signalr": "1.0.3",
     "@ngrx/effects": "6.1.0",
     "@ngrx/store": "6.1.0",
     "@ngrx/store-devtools": "6.1.0",
-    "@angular/animations": "6.1.1",
-    "@angular/common": "6.1.1",
-    "@angular/compiler": "6.1.1",
-    "@angular/compiler-cli": "6.1.1",
-    "@angular/core": "6.1.1",
-    "@angular/forms": "6.1.1",
-    "@angular/http": "6.1.1",
-    "@angular/platform-browser": "6.1.1",
-    "@angular/platform-browser-dynamic": "6.1.1",
-    "@angular/platform-server": "6.1.1",
-    "@angular/router": "6.1.1",
-    "@angular/upgrade": "6.1.1",
-    "@angular-devkit/core": "0.7.2",
+    "@angular/animations": "6.1.7",
+    "@angular/common": "6.1.7",
+    "@angular/compiler": "6.1.7",
+    "@angular/compiler-cli": "6.1.7",
+    "@angular/core": "6.1.7",
+    "@angular/forms": "6.1.7",
+    "@angular/http": "6.1.7",
+    "@angular/platform-browser": "6.1.7",
+    "@angular/platform-browser-dynamic": "6.1.7",
+    "@angular/platform-server": "6.1.7",
+    "@angular/router": "6.1.7",
+    "@angular/upgrade": "6.1.7",
+    "@angular-devkit/core": "0.8.1",
     "core-js": "2.5.7",
     "ie-shim": "0.1.0",
     "msgpack5": "4.2.0",
-    "rxjs": "6.2.2",
-    "rxjs-compat": "6.2.2",
+    "rxjs": "6.3.2",
+    "rxjs-compat": "6.3.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^6.1.2",
+    "@ngtools/webpack": "^6.2.1",
     "@types/jasmine": "^2.8.8",
     "angular-router-loader": "0.8.5",
-    "@types/node": "^10.5.5",
+    "@types/node": "^10.9.4",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^5.2.0",
+    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^0.1.19",
-    "codelyzer": "^4.4.2",
-    "concurrently": "^3.6.1",
+    "codelyzer": "^4.4.4",
+    "concurrently": "^4.0.1",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "3.1.0",
+    "jasmine-core": "3.2.1",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
-    "karma": "^2.0.5",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.2.0",
+    "karma-jasmine-html-reporter": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^3.0.0",
-    "node-sass": "^4.9.2",
+    "karma-webpack": "3.0.0",
+    "node-sass": "^4.9.3",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.21.0",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.0",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.6.0",
     "typescript": "2.7.2",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.4",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.17.2",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^3.1.5",
+    "webpack-dev-server": "^3.1.8",
     "webpack-cli": "3.1.0"
   },
   "-vs-binding": {
