--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -24,6 +24,10 @@
         "lint": "tslint -p tsconfig.json angularApp/**/*.ts"
     },
     "dependencies": {
+	    "@aspnet/signalr": "1.0.4",
+	    "@ngrx/effects": "6.1.0",
+	    "@ngrx/store": "6.1.0",
+	    "@ngrx/store-devtools": "6.1.0",
         "@angular/animations": "~7.0.0",
         "@angular/common": "~7.0.0",
         "@angular/compiler": "~7.0.0",
@@ -33,9 +37,11 @@
         "@angular/platform-browser": "~7.0.0",
         "@angular/platform-browser-dynamic": "~7.0.0",
         "@angular/router": "~7.0.0",
+		"@angular-devkit/core": "0.8.5",
         "bootstrap": "4.1.3",
         "core-js": "^2.5.4",
         "ie-shim": "0.1.0",
+        "msgpack5": "4.2.1",
         "rxjs": "~6.3.3",
         "rxjs-compat": "^6.3.3",
         "zone.js": "~0.8.26"
