--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -55,18 +55,18 @@
         "@types/jasmine": "~2.8.9",
         "@types/jasminewd2": "~2.0.5",
         "codelyzer": "~4.5.0",
-        "jasmine-core": "~3.3.0",
+        "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~3.1.1",
+        "karma": "~3.0.0",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.4",
         "karma-jasmine": "~1.1.2",
-        "karma-jasmine-html-reporter": "^1.3.1",
+        "karma-jasmine-html-reporter": "0.2.2",
         "protractor": "~5.4.1",
         "ts-node": "~7.0.1",
         "tslint": "~5.11.0",
         "typescript": "~3.1.3",
-        "@ngtools/webpack": "^7.0.3",
+        "@ngtools/webpack": "6.2.5",
         "angular-router-loader": "0.8.5",
         "angular2-template-loader": "^0.6.2",
         "awesome-typescript-loader": "^5.2.1",
