--- a/src/AspNetCoreAngularSignalR/package.json
+++ b/src/AspNetCoreAngularSignalR/package.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-webpack-visualstudio",
-    "version": "6.0.0",
+    "version": "7.0.0",
     "description": "An Angular VS template",
     "main": "wwwroot/index.html",
     "author": "",
@@ -24,81 +24,80 @@
         "lint": "eslint . --ext .ts"
     },
     "dependencies": {
-        "@angular/animations": "~9.0.7",
-        "@angular/common": "~9.0.7",
-        "@angular/compiler": "~9.0.7",
-        "@angular/core": "~9.0.7",
-        "@angular/forms": "~9.0.7",
-        "@angular/platform-browser": "~9.0.7",
-        "@angular/platform-browser-dynamic": "~9.0.7",
-        "@angular/router": "~9.0.7",
-        "@popperjs/core": "^2.1.1",
-        "@types/common-tags": "^1.8.0",
-        "@microsoft/signalr": "3.1.2",
-        "msgpack5": "4.2.1",
-        "@ngrx/effects": "9.0.0",
-        "@ngrx/store": "9.0.0",
-        "@ngrx/store-devtools": "9.0.0",
-        "bootstrap": "4.4.1",
+        "@microsoft/signalr": "5.0.0",
+        "@ngrx/effects": "10.0.1",
+        "@ngrx/store": "10.0.1",
+        "@ngrx/store-devtools": "10.0.1",
         "common-tags": "^1.8.0",
         "core-js": "^2.6.5",
+        "@angular/animations": "~11.0.2",
+        "@angular/common": "~11.0.2",
+        "@angular/compiler": "~11.0.2",
+        "@angular/core": "~11.0.2",
+        "@angular/forms": "~11.0.2",
+        "@angular/platform-browser": "~11.0.2",
+        "@angular/platform-browser-dynamic": "~11.0.2",
+        "@angular/router": "~11.0.2",
+        "@popperjs/core": "^2.5.4",
+        "bootstrap": "4.5.3",
         "ie-shim": "0.1.0",
-        "jsrsasign-reduced": "8.0.12",
-        "rxjs": "~6.5.4",
-        "rxjs-compat": "^6.5.4",
-        "zone.js": "~0.10.3"
+        "jsrsasign-reduced": "8.0.15",
+        "msgpack5": "4.2.1",
+        "rxjs": "~6.6.3",
+        "rxjs-compat": "^6.6.3",
+        "zone.js": "~0.11.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.900.7",
-        "@angular/cli": "~9.0.7",
-        "@angular/compiler-cli": "~9.0.7",
-        "@angular/language-service": "~9.0.7",
-        "@ngtools/webpack": "^9.0.7",
-        "@types/jasmine": "~3.5.9",
+        "@angular-devkit/build-angular": "^0.1100.2",
+        "@angular/cli": "~11.0.2",
+        "@angular/compiler-cli": "~11.0.2",
+        "@angular/language-service": "~11.0.2",
+        "@ngtools/webpack": "^11.0.2",
+        "@types/jasmine": "~3.6.2",
         "@types/jasminewd2": "~2.0.8",
-        "@types/node": "~13.9.2",
+        "@types/node": "~14.14.10",
         "angular-router-loader": "0.8.5",
         "angular2-template-loader": "^0.6.2",
         "awesome-typescript-loader": "^5.2.1",
-        "clean-webpack-plugin": "^2.0.2",
-        "codelyzer": "~5.2.1",
-        "concurrently": "^5.1.0",
+        "clean-webpack-plugin": "2.0.2",
+        "codelyzer": "~5.2.2",
+        "concurrently": "^5.2.0",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
-        "eslint": "^6.8.0",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
-        "jasmine-core": "~3.5.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "jquery": "^3.4.1",
+        "eslint": "^7.14.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~6.0.0",
+        "jquery": "^3.5.1",
         "json-loader": "^0.5.7",
-        "karma": "~4.4.1",
+        "karma": "~5.2.3",
         "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~2.1.1",
-        "karma-jasmine": "~3.1.1",
-        "karma-jasmine-html-reporter": "^1.5.2",
-        "karma-sourcemap-loader": "^0.3.7",
+        "karma-coverage-istanbul-reporter": "~3.0.3",
+        "karma-jasmine": "~4.0.1",
+        "karma-jasmine-html-reporter": "^1.5.4",
+        "karma-sourcemap-loader": "^0.3.8",
         "karma-spec-reporter": "^0.0.32",
         "karma-webpack": "4.0.2",
-        "node-sass": "^4.13.1",
         "protractor": "~6.0.0",
         "raw-loader": "^1.0.0",
+        "node-sass": "^4.14.1",
         "sass-loader": "^8.0.2",
         "rimraf": "^3.0.2",
         "source-map-loader": "^0.2.4",
         "style-loader": "^1.1.3",
         "toposort": "2.0.2",
         "url-loader": "^1.1.2",
-        "ts-node": "~8.7.0",
-        "@typescript-eslint/eslint-plugin-tslint": "^2.24.0",
-        "@typescript-eslint/eslint-plugin": "^2.24.0",
-        "@typescript-eslint/parser": "^2.24.0",
+        "ts-node": "~9.0.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^4.8.2",
+        "@typescript-eslint/eslint-plugin": "^4.8.2",
+        "@typescript-eslint/parser": "^4.8.2",
         "uglifyjs-webpack-plugin": "^2.2.0",
-        "typescript": "~3.7.5",
-        "webpack": "^4.42.0",
-        "webpack-bundle-analyzer": "^3.6.1",
-        "webpack-cli": "3.3.11",
-        "webpack-dev-server": "^3.10.3",
+        "webpack": "^4.44.1",
+        "webpack-bundle-analyzer": "^3.8.0",
+        "webpack-cli": "3.3.12",
+        "typescript": "~4.0.5",
+        "webpack-dev-server": "^3.11.0",
         "webpack-filter-warnings-plugin": "^1.2.1"
     },
     "-vs-binding": {
