--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,10 +13,9 @@ install:
 build_script:
 - dotnet build
 - npm -g install npm@latest
-- cd src\AspNetCoreAngularSignalR
+- cd src\AngularSignalR
 - npm install
-- npm run build-production
-- npm run build-dev
+- npm run build
 before_build:
 - appveyor-retry dotnet restore -v Minimal
 
