--- a/src/AngularSignalR/package.json
+++ b/src/AngularSignalR/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "format": "npx prettier --write ./src"
   },
   "private": true,
   "dependencies": {
