fix connection string

--- a/src/AspNetCoreAngularSignalR/appsettings.json
+++ b/src/AspNetCoreAngularSignalR/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
 	"ConnectionStrings": {
-		"DefaultConnection": "Data Source=C:\\git\\damienbod\\AspNetCoreAngularSignalR\\src\\AspNetCoreAngularSignalR\\news.sqlite"
+		"DefaultConnection": "Data Source=news.sqlite"
 	}
 }
